add implementations to all endpoints
