# data/openapi/mzmlapi.yaml
@@ -11,6 +11,7 @@ components:
       type: string
     chromatogramId:
       type: integer
+      format: int64
     errorMsg:
       type: object
       properties:
@@ -35,6 +36,12 @@ components:
   responses:
     400:
       description: error in request
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/errorMsg'
+    404:
+      description: msdata not found
       content:
         application/json:
           schema:
@@ -85,6 +92,10 @@ paths:
                 properties:
                   filename:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
 
   /msdata/{msDataId}/instrument:
@@ -99,6 +110,10 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/analyzer:
     parameters:
@@ -115,6 +130,10 @@ paths:
                 properties:
                   analyzer:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/detector:
     parameters:
@@ -131,6 +150,10 @@ paths:
                 properties:
                   detector:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/ionisation:
     parameters:
@@ -147,6 +170,10 @@ paths:
                 properties:
                   ionisation:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/manufacturer:
     parameters:
@@ -163,6 +190,11 @@ paths:
                 properties:
                   manufacturer:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
+
 
   /msdata/{msDataId}/instrument/model:
     parameters:
@@ -179,6 +211,10 @@ paths:
                 properties:
                   model:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/sample:
     parameters:
@@ -195,6 +231,10 @@ paths:
                 properties:
                   sample:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/software:
     parameters:
@@ -211,6 +251,10 @@ paths:
                 properties:
                   software:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/instrument/source:
     parameters:
@@ -227,6 +271,10 @@ paths:
                 properties:
                   source:
                     type: string
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/scans:
     parameters:
@@ -245,6 +293,11 @@ paths:
                     type: array
                     items:
                       type: integer
+                      format: int64
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/scans/{id}/header:
     parameters:
@@ -258,6 +311,10 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/scans/{id}/peaks:
     parameters:
@@ -276,6 +333,11 @@ paths:
                     type: array
                     items:
                       type: number
+                      format: double
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/scans/{id}/peaks/count:
     parameters:
@@ -292,6 +354,11 @@ paths:
                 properties:
                   peakCount:
                     type: integer
+                    format: int64
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/scans/count:
     parameters:
@@ -308,6 +375,11 @@ paths:
                 properties:
                   scanCount:
                     type: integer
+                    format: int64
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/IsolationWindow:
     parameters:
@@ -329,8 +401,14 @@ paths:
                       properties:
                         low:
                           type: number
+                          format: double
                         high:
                           type: number
+                          format: double
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/chromatograms:
     parameters:
@@ -344,6 +422,10 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/chromatograms/count:
     parameters:
@@ -360,6 +442,11 @@ paths:
                 properties:
                   chromatogramCount:
                     type: integer
+                    format: int64
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/chromatograms/{chromatogramId}:
     parameters:
@@ -374,6 +461,10 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
 
   /msdata/{msDataId}/chromatograms/{chromatogramId}/header:
@@ -389,6 +480,10 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
   /msdata/{msDataId}/3dmap:
     parameters:
@@ -402,5 +497,9 @@ paths:
             application/json:
               schema:
                 type: object
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
 
 
